# autoresearch-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.excalidraw  prepare.py  prepare_mlx.py  program.md  pyproject.toml  train.py  train_mlx.py
domains/: agriculture.yaml  finance.yaml  healthcare.yaml  social_science.yaml
examples/: agriculture_program.md  social_behavior_program.md
generator/: auto_detect.py  domain_questions.py  llm_client.py  llm_generator.py  program_generator.py  scaffold.py  templates.py
