[project]
name = "autoresearch-lab"
version = "0.1.0"
description = "General-purpose autonomous research engine"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# CUDA backend (karpathy/autoresearch original)
cuda = [
    "kernels",
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "requests",
    "rustbpe",
    "tiktoken",
    "torch==2.9.1",
]
# Apple Silicon MLX backend
mlx = [
    "mlx>=0.30.0",
    "numpy",
    "pyarrow",
    "regex",
    "requests",
    "rustbpe",
    "tiktoken",
]
# Experiment scaffolding (tabular ML)
domain = [
    "pandas",
    "numpy",
    "scikit-learn",
    "pyarrow",
    "openpyxl",
]
# LLM-powered auto-detect
llm = [
    "litellm",
]

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
